Mining Framework Analysis